# chatToBuyAPropety

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  config.py  error_handlers.py  exceptions.py  main.py  pyproject.toml  requirements.txt  scripts.py
backend/agent/: __init__.py
backend/conversation/: __init__.py  intent_router.py  state_machine.py
backend/db/: __init__.py  connection.py
backend/domain/: __init__.py  borrowing_capacity.py  budget_gap_detector.py  llm_client.py  user_needs_builder.py
backend/models/: __init__.py  base.py  chat.py  conversation_state.py  financial.py  schemas.py  summary.py  user_needs.py
backend/prompts/: __init__.py  system_prompt_builder.py
backend/redis_store/: price_cache.py  session_store.py
backend/routers/: __init__.py  chat.py  deps.py
backend/scripts/: check_protocols.py
backend/services/: __init__.py  chat_service.py  llm_client.py
backend/tests/: __init__.py  conftest.py  test_anon_id_dependency.py  test_borrowing_capacity.py  test_budget_gap_detector.py  test_chat_endpoint.py  test_chat_repository.py  test_chat_service.py  test_code_driven_executor.py  test_config.py  test_connector.py  test_context_resolver.py  test_error_handlers.py  test_execution_context.py  test_execution_events.py  test_execution_response.py  test_extraction_schema.py  test_intent_router.py  test_llm_driven_executor.py  test_orchestrator.py  test_repositories_unit.py  test_session_id_dependency.py  test_session_store.py  test_state_machine.py  (+5 more)
(+234 files in other folders)
