[project]
name = "propertyai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scripts"]

[tool.setuptools.packages.find]
include = ["conversation*", "models*", "prompts*", "routers*", "services*", "tools*"]

[tool.uv]
package = true

[project.scripts]
test = "scripts:test"
lint = "scripts:lint"
format = "scripts:format_code"
typecheck = "scripts:typecheck"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["models", "tools", "conversation", "prompts", "services", "routers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
